--- a/Game.html
+++ b/Game.html
@@ -2,20 +2,17 @@
 <html>
     <head>
         <title>Game_racing</title>
-        <link rel="stylesheet" href="Game.css">
+        <link rel="stylesheet" href="Game1.css">
         <meta charset="utf-8">
     </head>
     <body>
-            <ul class = "list">
-                    <li>Главная</li>
-                    <li>Начать игру</li>
-                    <li>Инструкция</li>
-                    <li>Рекорды</li>
-                    <li>Выход</li>
-            </ul>
-        <div class="wrapper">
-            <canvas width="0" height="0" class="canvas" id="canvas"></canvas>
+        <div id='IPage'>
+
         </div>
-        <script src="Game.js"></script>
+        <input type=button value='Главная' onclick='switchToMainPage()'>
+        <span id='IPhotosButtons'></span>
+        <input type=button value='О нас' onclick='switchToAboutPage()'>
+        <script src="Game1.js"></script>
+        <script src="game.js"></script>
     </body>
 </html>
