--- a/registr.html
+++ b/registr.html
@@ -7,15 +7,17 @@
 </head>
 <body>
 <div id="container">
-    <form class="mainform" >
+    <form class="mainform" id="form">
         <p class="name">
             <label for="name">Имя</label>
-            <input type="text" id="name" name="name" placeholder="Введи ваше имя" />
+            <input required type="text" id="name" name="name" placeholder = "Введите ваше имя" />
         </p>
         <p>
-          <button class="send">Войти</button>
+          <button type="submit" id="send" class="send">Войти</button>
+
         </p>
     </form>
 </div>
+<script src="registr.js"></script>
 </body>
 </html>
