--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="loginPage.js"></script>
     <script src="mainPage.js"></script>
     <script src="recordsPage.js"></script>
+    <script src="timer.js"></script>
     <script src="game.js"></script>
     <script src="index.js"></script>
-
 </body>
 </html>
